--- a/avocado/restyle.css
+++ b/avocado/restyle.css
@@ -1,3 +1,12 @@
+/*
+Dark: #35362D
+Green: #8BA355
+light green: #E4EE69
+Orange: #D9541F
+Beige: #D6D1BF
+*/
+
+
 @media only screen and (max-width: 1020px){
   .hamburger{
     display: block;
@@ -22,7 +31,7 @@
   }
 
   .navbar{
-    grid-template-columns: 25% 75%;
+    grid-template-columns: 33% auto;
   }
 
   .navCollapse{
@@ -48,17 +57,35 @@ body{
   width: 100%;
   font-family: 'Pompiere', cursive;
   background: #8BA355;
+  font-size: 20px;
 }
+
+img{
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+
+  will-change: transform;
+}
+
+
 
 a{
   text-decoration: none;
   color: inherit;
-  font-family: 'Freckle Face', cursive;
+  transition: all 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
 }
 
 ul{
   padding: 0;
   list-style-type: none;
+}
+
+h1,h2,h3,h4,h5,h6{
+  text-align: center;
 }
 
 h1{
@@ -78,25 +105,53 @@ h2{
 h3{
   font-family: 'Patrick Hand SC', cursive;
   letter-spacing: 4px;
-  font-size: 20px;
+  font-size: 30px;
+  margin: 5px;
 }
+/*
+.navTitle{
+  font-family: 'Frijole', cursive;
+  font-weight: bold;
+  font-size: 20px;
+} */
 
 .content{
   width: 90%;
   margin: 0 auto;
-  margin-top: 60px;
+  margin-top: 4em;
+  margin-bottom: 2em;
+}
 
+.container{
+  background-color:#f7f3e6;
+  color:#8BA355;
+  border-radius: 10px;
+  margin-top: 3em;
+  border: 1px solid #E4EE69;
+  padding: 1em;
+}
+
+.container img {
+  width: 75%;
+  max-width: 500px;
+  height: auto;
+
+}
+
+.container p{
+  padding: 9px;
 }
 
 .hamburger{
   width:50px;
+  margin: 5px;
 }
 
 .hamLine{
   width: 40px;
   height: 5px;
   border-radius: 5px;
-  background-color: white;
+  background-color: #f7f3e6;
   margin: 6px;
 }
 
@@ -108,15 +163,85 @@ h3{
 
 .navbar{
   display: grid;
-  color: white;
+  color: #f7f3e6;
   background-color: #8BA355;
   position:fixed;
   top:0;
   width: 100%;
   font-family: 'Nunito Sans', sans-serif;
   border-bottom: 1px solid #E4EE69;
+  z-index: 999;
 }
 
 .navbar a{
   padding: 10px;
+}
+
+.first{
+  height: 85vh;
+}
+
+a:hover{
+  color: #D9541F;
+}
+img:hover{
+    cursor:pointer;
+    animation: bounceOut 0.4s linear;
+}
+
+
+#dancing {
+  animation: dance 4s infinite;
+  -webkit-animation: dance 4s infinite;
+  -moz-animation: dance 4s infinite;
+  position:relative;
+  /* top: 300px;*/
+  left: 0;
+}
+
+@keyframes dance {
+  from{
+    left: 100%;
+    }
+}
+@-webkit-keyframes dance {
+  from{
+    left: 100%;
+    }
+}
+@-moz-keyframes dance {
+  from{
+    left: 100%;
+    }
+}
+
+@keyframes bounceOut {
+  0% {
+    box-shadow: 0 0 0 4px $bounce-color;
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  25% {
+    box-shadow: 0 0 0 1px $bounce-color;
+    opacity: 1;
+    transform: scale(0.97);
+  }
+
+  50% {
+    box-shadow: 0 0 0 7px $bounce-color;
+    opacity: 1;
+    transform: scale(1.01);
+  }
+
+  75% {
+    box-shadow: 0 0 0 4px $bounce-color;
+    opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    box-shadow: 0 0 0 5px $bounce-color;
+    opacity: 1;
+  }
 }
